brat/test/golden/error/type-arith2.brat.golden
Error in test/golden/error/type-arith2.brat@1:20-25
f(n :: #, Vec(Nat, n * n)) -> Bool
                   ^^^^^

  Type error: Type level arithmetic too confusing

